web-infras/parser/tests/fixtures/babel/es2022/top-level-await-module/inside-function/output.txt
[SyntaxError]: Can not use 'await' as identifier inside an async function. (2,3)
2|  await 0;
 | ^
[SyntaxError]: Missing semicolon or line terminator. (2,9)
2|  await 0;
 |       ^
